--- a/template/form.html
+++ b/template/form.html
@@ -9,7 +9,17 @@
 </head>
 
 <body>
-
+  <h1>
+    Form
+  </h1>
+  <ul>
+    <li>
+      Username: {{.Name}}
+    </li>
+    <li>
+      Email: {{.Email}}
+    </li>
+  </ul>
 </body>
 
 </html>
